Closed
Bug 200966
Opened 22 years ago
Closed 22 years ago
margin of table steals events from previous elements
Categories
(Core :: Layout, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla1.4beta
People
(Reporter: paulREMOVETHISBIT, Assigned: dbaron)
References
()
Details
(Whiteboard: [patch])
Attachments
(1 file)
|
1.70 KB,
patch
|
bernd_mozilla
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.3) Gecko/20030312
Build Identifier: Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.4a) Gecko/20030401
Some of the links on the nav bar at the supplied URL are unclickable, and
unselectable. The problem goes away if "position: absolute" is not used on the
enclosing <div>.
Reproducible: Always
Steps to Reproduce:
1. Load the URL supplied above.
2. Mouseover each of the links in the left navbar.
Actual Results:
Some of the links do not behave as links at all - on a mouseover, the cursor
does not change and nothing is displayed in the status bar, and on a click,
nothing happens. Additionally, it isn't possible to "drag-select" the text of
these links with the mouse unless the selection begins outside the area affected
by this bug.
Expected Results:
All of the links should function as any other normal link.
This problem can be replicated on several of the pages on the given site (e.g.
"About Me", "Soup" and "Toys"), while other pages function correctly (e.g.
"Front Page"), even though all the pages use the same XHTML and CSS to display
the nav bar.
We tested these pages on IE 6.0 SP1 and Opera 6.04, and they behaved correctly,
while we replicated the incorrect behaviour in Mozilla 1.3 and 1.4a, Phoenix 0.5
and Netscape 6. The pages pass the W3C's XHTML and CSS validators.
The behaviour seems to vary slightly from machine to machine - all
configurations we tested exhibit the problem, but different configurations had
different combinations of "dead" links on any particular page. In some
situations, a link appeared to work if the mouse cursor passed over the top or
bottom half of its text, but not the other.
The links behave correctly if the "position: absolute;" entry is removed from
the #menu block in the CSS. ( http://www.jrhunt.co.uk/default.css )
All of the offending links are listed correctly in the 'Page Info' dialog,
indicating, we assume, a rendering problem.
| Assignee | ||
Comment 1•22 years ago
|
||
My guess is that the outer table frame is stealing events. (It contains the
table's margin, right?)
| Assignee | ||
Comment 2•22 years ago
|
||
| Assignee | ||
Comment 3•22 years ago
|
||
Taking bug.
Assignee: other → dbaron
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P3
Summary: position: absolute applied to <div> causes strange behaviour in <a> and other elements inside the <div> → margin of table steals events from previous elements
Whiteboard: [patch]
Target Milestone: --- → mozilla1.4beta
| Assignee | ||
Updated•22 years ago
|
Attachment #119635 -
Flags: superreview?(bzbarsky)
Attachment #119635 -
Flags: review?(bernd.mielke)
Updated•22 years ago
|
Attachment #119635 -
Flags: superreview?(bzbarsky) → superreview+
Attachment #119635 -
Flags: review?(bernd.mielke) → review+
| Assignee | ||
Comment 4•22 years ago
|
||
Fix checked in to trunk, 2003-04-09 14:14 PDT.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•