The table outer frame should not get events for any coordinates, since it includes the margins of the table and caption.  b=200966  r=bernd  sr=bzbarsky